--- a/main.css
+++ b/main.css
@@ -1,4 +1,16 @@
+body {
+        background-color: black;
+        text-align: center;
+}
+
+footer {
+text-align: left;
+}
+
+
+
 .crop {
+ text-align: center;
  height: 300px;
  width: 400px;
  overflow: hidden;
@@ -6,4 +18,26 @@
 .crop img {
  height: auto;
  width: 400px;
+}
+
+nav li {
+  float: left;
+}
+
+nav li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+}
+
+nav li a:hover {
+        background-color: #111;
+  color: white;
+}
+
+nav a.active {
+  background-color: darkgrey;
+  color: black;
 }
