--- a/main.css
+++ b/main.css
@@ -10,15 +10,14 @@ text-align: left;
 
 
 .crop {
- text-align: center;
- height: 350px;
- width: 800px;
+ height: 300px;
+ width: 400px;
  overflow: hidden;
 }
 .crop img {
  text-align: center
  height: auto;
- width: 800px;
+ width: 400px;
 }
 
 nav li {
@@ -41,4 +40,8 @@ nav li a:hover {
 nav a.active {
   background-color: darkgrey;
   color: black;
+}
+
+p {
+  color:white;
 }
