--- a/main.css
+++ b/main.css
@@ -1,5 +1,4 @@
 body {
-        background-color: black;
         text-align: center;
 }
 
@@ -18,6 +17,12 @@ text-align: left;
  text-align: center
  height: auto;
  width: 400px;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 nav li {
