--- a/main.css
+++ b/main.css
@@ -2,6 +2,13 @@ body {
         text-align: center;
 }
 
+#page-wrap {
+     width: 800px;
+     margin: 0 auto;
+     text-align: center;
+}
+
+
 footer {
 text-align: left;
 }
