--- a/main.css
+++ b/main.css
@@ -8,6 +8,9 @@ body {
      text-align: center;
 }
 
+h1 {
+text-align:center;
+}
 
 footer {
 text-align: left;
@@ -46,7 +49,7 @@ nav li a:hover {
 }
 
 nav a.active {
-  background-color: darkgrey;
+  background-color: white;
   color: black;
 }
 
