fixed script string bug and updated mk.html

--- a/main.css
+++ b/main.css
@@ -42,3 +42,11 @@ nav a.active {
   background-color: darkgrey;
   color: black;
 }
+
+.mkResults li {
+  color: white;
+}
+
+form label {
+  color: white;
+}
